--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<!-- Google tag  -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XGTF5JKMKT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XGTF5JKMKT');
+</script>
 
 <title>Java</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -125,7 +134,7 @@
 <body>
     <div id="page">
         <header>
-            <img src="banner.png">
+            <img src="banner.png" alt="Portfolio pieces banner">
                 <a href="index.html"><li>Home</li>
                 </a>
             <h1>Portfolio Survey</h1>
@@ -148,5 +157,6 @@
     </main>
 
     </div>
+
 
 </body></html>
