--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 <body>
     <div id="page">
         <header>
+          <!-- Alt tag for SEO purposes this page only has image to tag -->
             <img src="banner.png" alt="Portfolio pieces banner">
                 <a href="index.html"><li>Home</li>
                 </a>
@@ -160,3 +161,4 @@
 
 
 </body></html>
+
